# spolyrics

./: .gitignore  config.py  constants.py  main.py  pyproject.toml  setting.py  spotify.py
.github/workflows/: upload_release.yml
service/: __init__.py  genius.py  service_abc.py  yandex_music.py
services/: __init__.py  genius.py  service_abc.py  spotify_updater.py  yandex_music.py
services/lyrics_providers/: __init__.py  genius_provider.py  lyrics_provider_abc.py  yandex_music_provider.py
services/lyrics_providers/cache_providers/: cache_lyrics_abc.py  sqlite_cache_lyrics.py
services/spotify/: __init__.py  oauth_pkce.py  saver_token.py  spotify_api.py
spolyrics/: __init__.py  __main__.py  application.py  constants.py  exceptions.py
spolyrics/services/: __init__.py  spotify_updater.py
spolyrics/services/lyrics_providers/: __init__.py  genius_provider.py  lyrics_provider_abc.py  yandex_music_provider.py
spolyrics/services/lyrics_providers/cache_providers/: cache_lyrics_abc.py  sqlite_cache_lyrics.py
spolyrics/services/spotify/: __init__.py  oauth_pkce.py  saver_token.py  spotify_api.py
spolyrics/ui/: main_window.py  web_auth.py
spolyrics/ui/designer/: mainwindow.py
spolyrics/utils/: waitingdata.py
spotify/: __init__.py  oauth_pkce.py  saver_token.py  spotify.py  spotify_updater.py  token_info.py
spotify/api/: oauth_pkce.py  saver_token.py  spotify_api.py  token_info.py
ui/: main_window.py  web_auth.py
ui/designer/: mainwindow.py  mainwindow.ui  webauth.py  webauth.ui
utils/: __init__.py  waitingdata.py
